--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>League parser</title>
 
   <base href="/" />
 
